2010-02-24	Hans Rakers <hans at react.nl>

		* Fixed double free in eaccelerator_globals_dtor. This closes
		  ticket #404

2010-02-18	Hans Rakers <hans at react.nl>

		* Remove some leftover debug output that broke compilation with
		  php-5.2 and --with-eaccelerator-debug

2010-02-04	Bart Vanbrabant <bart at vanbrabant.eu>

		* Now really add the sched_yield command and not only in commented out
		* Bump version to 0.9.6

2010-02-04	Hans Rakers <hans at react.nl>

		* Fixed linking of ZEND_DECLARE_INHERITED_CLASS_DELAYED across
		  bb's in the optimizer. This fixes bug #399

2010-02-03	Bart Vanbrabant <bart at vanbrabant.eu>

		* Use snprintf the right way. See #290
		* Add a call to sched_yield after a failed spinlock to prevent
		deadlock conditions. This should fix #381 and is a real fix for #340.
		Instead of using a fake select as yield, a check is added to disable
		spinlocks on systems that do not have sched_yield.
		* Fix spinlocks on Solaris with Sun Compiler. #325

2010-01-22	Bart Vanbrabant <bart at vanbrabant.eu>

		* Release 0.9.6-rc2

2010-01-21	Hans Rakers <hans at react.nl>

		* Set op_array->early_binding in a later stage.
		  This fixes ticket #394

2010-01-20	Hans Rakers <hans at react.nl>

		* Some more work on delayed early binding. This fixes
		  ticket #388
		* Some reformatting in ea_dasm.c
		* Win32 VC6 project file updated

2010-01-19	Bart Vanbrabant <bart at vanbrabant.eu>

		* Remove obsolete documentation
		* Update year in copyright

2010-01-19	Hans Rakers <hans at react.nl>

		* Implemented ZEND_GOTO
		* Implemented delayed early binding for php-5.3. This
		  solves ticket #146 (Problems with require_once with
		  circular dependencies) for everyone using php-5.3.
		  See http://marc.info/?l=php-internals&m=120539866910125&w=2
		  for more info on this.
		* Fixed ticket #386 (Crash using const & php-5.3)
		* Fixed a bunch of other php-5.3 related issues found by
		  using the test suite and all php-5.3 Zend engine tests